rabbitmq queues are working

--- a/alunos/templates/aluno.html
+++ b/alunos/templates/aluno.html
@@ -309,7 +309,7 @@
                 </div>
                 <div class="info-item">
                     <p>Vencimento</p>
-                    <h4>{{ aluno.dia_vencimento|date:"d/m/Y" }}</h4>
+                    <h4>Dia {{ aluno.dia_vencimento }}</h4>
                 </div>
                 <div class="info-item">
                     <p>Aulas Contratadas</p>
